@startuml Domain Model

    class User {
    }

    class Sentence {
        <<sentenceDescription>>
        <<syntacticTree>>
    }
    
    class Analyzer {
    }
    
    class TemplateGenerator {
         
    }

    class Template {
        <<templateDescription>>
        <<wordCount>>
    }

    class Dictionary {
        
    }

    class WordPicker {
    }
    class SentenceGenerator {
    }

    class Validator {
        <<results>>
        <<mode>>
    }
    class Nouns {

    }
    class Verbs {

    }
    class Adjectives {

    }
    class SentenceStructures {

    }
    SentenceStructures o- TemplateGenerator
    Nouns -* Dictionary
    Verbs -* Dictionary
    Adjectives -* Dictionary

    User "1"--"*" Sentence
    Analyzer "1"--"*" Sentence
    SentenceGenerator "1"--"*" Sentence
    Validator "1"--"*" Sentence
    SentenceGenerator "1"--"1" Template
    SentenceGenerator "1"--"1" WordPicker
    TemplateGenerator "1"--"1" Template
    Dictionary "1"--"1" WordPicker